--- a/template.html
+++ b/template.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Bootstrap POC</title>
-    <link rel="stylesheet" href="assets/css/qld.bootstrap.css">
+    <link rel="stylesheet" href="docs/assets/css/qld.bootstrap.css">
 
 </head>
 
@@ -352,8 +352,8 @@
 
 	</main>
 
-	<script src="assets/js/bootstrap.min.js"></script>
-	<script src="assets/js/main.js"></script>
+	<script src="docs/assets/js/bootstrap.min.js"></script>
+	<script src="docs/assets/js/main.js"></script>
 
 
 </body>
